read logcat logs in nonblocking mode with end timeout